--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
+= 0.4
+ * has_versions? does a faster db lookup
+
 = 0.3
+
   * moved local tmp path to RAILS_ROOT/tmp/s3_image/* to make it easy to symlink this dir to a capistrano shared dir so that if you're redeploying your site, any images being processed won't disappear
+  * s3_image_tag points to a images/no_image_(:label) if the image was not found
 
 = 0.2
 
